; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_arc_timer.c_arc_timer_starting_cpu.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_arc_timer.c_arc_timer_starting_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }

@arc_clockevent_device = common dso_local global i32 0, align 4
@arc_timer_freq = common dso_local global i32 0, align 4
@ARC_TIMERN_MAX = common dso_local global i32 0, align 4
@arc_timer_irq = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @arc_timer_starting_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arc_timer_starting_cpu(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.clock_event_device*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call %struct.clock_event_device* @this_cpu_ptr(i32* @arc_clockevent_device)
  store %struct.clock_event_device* %4, %struct.clock_event_device** %3, align 8
  %5 = call i32 (...) @smp_processor_id()
  %6 = call i32 @cpumask_of(i32 %5)
  %7 = load %struct.clock_event_device*, %struct.clock_event_device** %3, align 8
  %8 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %7, i32 0, i32 0
  store i32 %6, i32* %8, align 4
  %9 = load %struct.clock_event_device*, %struct.clock_event_device** %3, align 8
  %10 = load i32, i32* @arc_timer_freq, align 4
  %11 = load i32, i32* @ARC_TIMERN_MAX, align 4
  %12 = call i32 @clockevents_config_and_register(%struct.clock_event_device* %9, i32 %10, i32 0, i32 %11)
  %13 = load i32, i32* @arc_timer_irq, align 4
  %14 = call i32 @enable_percpu_irq(i32 %13, i32 0)
  ret i32 0
}

declare dso_local %struct.clock_event_device* @this_cpu_ptr(i32*) #1

declare dso_local i32 @cpumask_of(i32) #1

declare dso_local i32 @smp_processor_id(...) #1

declare dso_local i32 @clockevents_config_and_register(%struct.clock_event_device*, i32, i32, i32) #1

declare dso_local i32 @enable_percpu_irq(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
